Still trying to fix assets for when offline

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,11 @@
 
 @use 'sass:math';
 
-// Load Open Sans fonts from local assets for better PWA caching
-@import './assets/fonts/open-sans-400.css';
-@import './assets/fonts/open-sans-400-italic.css';
-@import './assets/fonts/open-sans-700.css';
-@import './assets/fonts/open-sans-300.css';
+// Import fonts from @fontsource for development and desktop
+@import '../node_modules/@fontsource/open-sans/400.css';
+@import '../node_modules/@fontsource/open-sans/400-italic.css';
+@import '../node_modules/@fontsource/open-sans/700.css';
+@import '../node_modules/@fontsource/open-sans/300.css';
 
 @include meta.load-css('styles/_css-variables');
 @include meta.load-css('styles/themes');
