--- a/src/styles/font/material-icons.scss
+++ b/src/styles/font/material-icons.scss
@@ -7,10 +7,11 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
+  font-display: block;
   src:
     local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url('../../assets/fonts/MaterialIcons-Regular.ttf') format('truetype');
+    url('../assets/fonts/MaterialIcons-Regular.ttf') format('truetype');
 }
 
 .material-icons {
