--- a/src/styles/fonts/open-sans.css
+++ b/src/styles/fonts/open-sans.css
@@ -9,8 +9,8 @@
   font-display: swap;
   font-weight: 300;
   src:
-    url(/assets/fonts/open-sans/open-sans-latin-300-normal.woff2) format('woff2'),
-    url(/assets/fonts/open-sans/open-sans-latin-300-normal.woff) format('woff');
+    url(../assets/fonts/open-sans/open-sans-latin-300-normal.woff2) format('woff2'),
+    url(../assets/fonts/open-sans/open-sans-latin-300-normal.woff) format('woff');
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
     U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -23,8 +23,8 @@
   font-display: swap;
   font-weight: 400;
   src:
-    url(/assets/fonts/open-sans/open-sans-latin-400-normal.woff2) format('woff2'),
-    url(/assets/fonts/open-sans/open-sans-latin-400-normal.woff) format('woff');
+    url(../assets/fonts/open-sans/open-sans-latin-400-normal.woff2) format('woff2'),
+    url(../assets/fonts/open-sans/open-sans-latin-400-normal.woff) format('woff');
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
     U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -37,8 +37,8 @@
   font-display: swap;
   font-weight: 400;
   src:
-    url(/assets/fonts/open-sans/open-sans-latin-400-italic.woff2) format('woff2'),
-    url(/assets/fonts/open-sans/open-sans-latin-400-italic.woff) format('woff');
+    url(../assets/fonts/open-sans/open-sans-latin-400-italic.woff2) format('woff2'),
+    url(../assets/fonts/open-sans/open-sans-latin-400-italic.woff) format('woff');
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
     U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -51,8 +51,8 @@
   font-display: swap;
   font-weight: 700;
   src:
-    url(/assets/fonts/open-sans/open-sans-latin-700-normal.woff2) format('woff2'),
-    url(/assets/fonts/open-sans/open-sans-latin-700-normal.woff) format('woff');
+    url(../assets/fonts/open-sans/open-sans-latin-700-normal.woff2) format('woff2'),
+    url(../assets/fonts/open-sans/open-sans-latin-700-normal.woff) format('woff');
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
     U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
